examples/invalid/syntaxErr/exception/throErr.wacc
# throw typo

# Output:
# #syntax_error#

# Program:

begin
    thro BadCharException("bad char!")
end